apache fory performance